# RDBMS-iCog-Labs

./: BasicQuery.txt  CMakeLists.txt  Makefile  README.md  TablesInfo.csv  at  attr
Test/: CMakeLists.txt  TableCxxTest.cpp  TestSuite.hpp
include/: attribute.hpp  database.hpp  header.hpp  helper.hpp  table.hpp  tuple.hpp  type.hpp
src/: AttributeClass.cpp  CMakeLists.txt  DatabaseClass.cpp  TableClass.cpp  TupleClass.cpp  classes.cpp  header.hpp  helperFunctions.cpp  main  main.cpp  queryParser.cpp  setOperation.cpp
